--- a/LoginWindow.xaml
+++ b/LoginWindow.xaml
@@ -1,8 +1,8 @@
 <Window x:Class="InspirationLabProjectStanSeyit.LoginWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Login" Height="200" Width="300">
-    <Grid Margin="10">
+        Title="Login" Height="225" Width="300" Background="#bbeaba" WindowStartupLocation="CenterScreen">
+    <Grid Margin="20">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
@@ -10,15 +10,21 @@
         </Grid.RowDefinitions>
 
         <StackPanel Grid.Row="0" Margin="0 0 0 10">
-            <Label Content="Username"/>
-            <TextBox Name="UsernameBox"/>
+            <Label Content="Username" FontWeight="Bold" Foreground="#2e2e2e"/>
+            <TextBox Name="UsernameBox" Padding="5" BorderBrush="#61be63" BorderThickness="1" Background="White"/>
         </StackPanel>
 
         <StackPanel Grid.Row="1" Margin="0 0 0 10">
-            <Label Content="Password"/>
-            <PasswordBox Name="PasswordBox"/>
+            <Label Content="Password" FontWeight="Bold" Foreground="#2e2e2e"/>
+            <PasswordBox Name="PasswordBox" Padding="5" BorderBrush="#61be63" BorderThickness="1" Background="White"/>
         </StackPanel>
 
-        <Button Grid.Row="2" Content="Login" Width="100" HorizontalAlignment="Center" Click="Login_Click"/>
+        <Button Grid.Row="2" Content="Login" Width="100" Height="30"
+                HorizontalAlignment="Center" 
+                Background="#61be63" Foreground="White"
+                FontWeight="Bold"
+                BorderThickness="0"
+                Cursor="Hand"
+                Click="Login_Click"/>
     </Grid>
 </Window>
