--- a/RegisterWindow.xaml
+++ b/RegisterWindow.xaml
@@ -1,7 +1,8 @@
 <Window x:Class="InspirationLabProjectStanSeyit.RegisterWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Register" Height="300" Width="400">
+        Title="Register" Height="300" Width="400"
+        Background="#bbeaba" WindowStartupLocation="CenterScreen">
     <Grid Margin="20">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -11,20 +12,26 @@
         </Grid.RowDefinitions>
 
         <StackPanel Grid.Row="0" Margin="0,0,0,10">
-            <Label Content="Username" />
-            <TextBox Name="UsernameBox" />
+            <Label Content="Username" FontWeight="Bold" Foreground="#2e2e2e"/>
+            <TextBox Name="UsernameBox" Padding="5" BorderBrush="#61be63" BorderThickness="1" Background="White"/>
         </StackPanel>
 
         <StackPanel Grid.Row="1" Margin="0,0,0,10">
-            <Label Content="Email" />
-            <TextBox Name="EmailBox" />
+            <Label Content="Email" FontWeight="Bold" Foreground="#2e2e2e"/>
+            <TextBox Name="EmailBox" Padding="5" BorderBrush="#61be63" BorderThickness="1" Background="White"/>
         </StackPanel>
 
         <StackPanel Grid.Row="2" Margin="0,0,0,10">
-            <Label Content="Password" />
-            <PasswordBox Name="PasswordBox" />
+            <Label Content="Password" FontWeight="Bold" Foreground="#2e2e2e"/>
+            <PasswordBox Name="PasswordBox" Padding="5" BorderBrush="#61be63" BorderThickness="1" Background="White"/>
         </StackPanel>
 
-        <Button Grid.Row="3" Content="Register" Width="100" HorizontalAlignment="Center" Click="Register_Click" />
+        <Button Grid.Row="3" Content="Register" Width="100" Height="30"
+                HorizontalAlignment="Center"
+                Background="#61be63" Foreground="White"
+                FontWeight="Bold"
+                BorderThickness="0"
+                Cursor="Hand"
+                Click="Register_Click"/>
     </Grid>
 </Window>
