all image carousels except for profile page done and working

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,4 +1,4 @@
-<Window x:Class="InspirationLabProjectStanSeyit.MainWindow"
+﻿<Window x:Class="InspirationLabProjectStanSeyit.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Homepage" Height="1000" Width="800">
@@ -41,7 +41,7 @@
                         <ColumnDefinition Width="Auto"/>
                     </Grid.ColumnDefinitions>
 
-                    <Button Grid.Column="0" Content="?" Width="40" Click="PrevImage_Click"/>
+                    <Button Grid.Column="0" Content="◀" Width="40" Click="PrevImage_Click"/>
 
                     <StackPanel Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Center" Margin="10,0">
 
@@ -95,7 +95,7 @@
 
                     </StackPanel>
 
-                    <Button Grid.Column="2" Content="?" Width="40" Click="NextImage_Click"/>
+                    <Button Grid.Column="2" Content="▶" Width="40" Click="NextImage_Click"/>
                 </Grid>
 
                 <Border Background="#bbeaba" CornerRadius="15" Padding="20" Margin="0,30,0,0">
