--- a/Management.xaml
+++ b/Management.xaml
@@ -18,12 +18,7 @@
                        Margin="0,10"/>
 
             <!-- CAROUSEL -->
-            <TextBlock Text="Explore Features" 
-                       FontSize="20" 
-                       FontWeight="Bold" 
-                       Foreground="Gray" 
-                       Margin="0,10,0,10" 
-                       TextAlignment="Center"/>
+            <TextBlock Text="Explore App Pages" FontSize="20" FontWeight="Bold" Foreground="Gray" Margin="0,10,0,10" TextAlignment="Center"/>
 
             <Grid HorizontalAlignment="Center">
                 <Grid.ColumnDefinitions>
@@ -35,37 +30,55 @@
                 <Button Grid.Column="0" Content="◀" Width="40" Click="PrevImage_Click"/>
 
                 <StackPanel Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Center" Margin="10,0">
-                    <!-- Carousel Item 1 -->
-                    <Grid Width="200" Height="120" Margin="5">
-                        <Button Name="CarouselButton1" BorderThickness="0" Background="Transparent" Click="CarouselItem1_Click">
-                            <Image Name="CarouselImage1" Stretch="UniformToFill"/>
-                        </Button>
-                        <TextBlock Name="CarouselLabel1"
-                                   Foreground="White"
-                                   Background="#80000000"
-                                   FontWeight="Bold"
-                                   FontSize="12"
-                                   VerticalAlignment="Bottom"
-                                   HorizontalAlignment="Center"
-                                   Padding="4"
-                                   TextAlignment="Center"/>
-                    </Grid>
 
-                    <!-- Carousel Item 2 -->
-                    <Grid Width="200" Height="120" Margin="5">
-                        <Button Name="CarouselButton2" BorderThickness="0" Background="Transparent" Click="CarouselItem2_Click">
-                            <Image Name="CarouselImage2" Stretch="UniformToFill"/>
-                        </Button>
-                        <TextBlock Name="CarouselLabel2"
-                                   Foreground="White"
-                                   Background="#80000000"
-                                   FontWeight="Bold"
-                                   FontSize="12"
-                                   VerticalAlignment="Bottom"
-                                   HorizontalAlignment="Center"
-                                   Padding="4"
-                                   TextAlignment="Center"/>
-                    </Grid>
+                    <Button Click="Image1_Click" BorderThickness="0" Background="Transparent" Width="150" Height="100" Margin="5">
+                        <Grid>
+                            <Image Name="Image1" Stretch="UniformToFill"/>
+                            <TextBlock Name="Label1"
+               Text="Features"
+               Foreground="White"
+               Background="#80000000"
+               FontWeight="Bold"
+               FontSize="12"
+               VerticalAlignment="Bottom"
+               HorizontalAlignment="Center"
+               Padding="4"
+               TextAlignment="Center"/>
+                        </Grid>
+                    </Button>
+
+                    <Button Click="Image2_Click" BorderThickness="0" Background="Transparent" Width="150" Height="100" Margin="5">
+                        <Grid>
+                            <Image Name="Image2" Stretch="UniformToFill"/>
+                            <TextBlock Name="Label2"
+               Text="Profile"
+               Foreground="White"
+               Background="#80000000"
+               FontWeight="Bold"
+               FontSize="12"
+               VerticalAlignment="Bottom"
+               HorizontalAlignment="Center"
+               Padding="4"
+               TextAlignment="Center"/>
+                        </Grid>
+                    </Button>
+
+                    <Button Click="Image3_Click" BorderThickness="0" Background="Transparent" Width="150" Height="100" Margin="5">
+                        <Grid>
+                            <Image Name="Image3" Stretch="UniformToFill"/>
+                            <TextBlock Name="Label3"
+               Text="Planner"
+               Foreground="White"
+               Background="#80000000"
+               FontWeight="Bold"
+               FontSize="12"
+               VerticalAlignment="Bottom"
+               HorizontalAlignment="Center"
+               Padding="4"
+               TextAlignment="Center"/>
+                        </Grid>
+                    </Button>
+
                 </StackPanel>
 
                 <Button Grid.Column="2" Content="▶" Width="40" Click="NextImage_Click"/>
