--- a/StudyMaterial.xaml
+++ b/StudyMaterial.xaml
@@ -13,8 +13,8 @@
             <TextBlock Text="StudyMaterial" FontSize="24" FontWeight="Bold" Foreground="#61be63"
                        HorizontalAlignment="Center" Margin="0,10"/>
 
-            <!-- MULTI-IMAGE CAROUSEL -->
-            <TextBlock Text="Explore Features" FontSize="20" FontWeight="Bold" Foreground="Gray" Margin="0,10,0,10" TextAlignment="Center"/>
+            <TextBlock Text="Explore App Pages" FontSize="20" FontWeight="Bold" Foreground="Gray" Margin="0,10,0,10" TextAlignment="Center"/>
+
             <Grid HorizontalAlignment="Center">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto"/>
@@ -25,31 +25,55 @@
                 <Button Grid.Column="0" Content="◀" Width="40" Click="PrevImage_Click"/>
 
                 <StackPanel Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Center" Margin="10,0">
-                    <!-- Image 1 -->
-                    <Grid Width="150" Height="100" Margin="5">
-                        <Button Name="ImageButton1" BorderThickness="0" Background="Transparent">
+
+                    <Button Click="Image1_Click" BorderThickness="0" Background="Transparent" Width="150" Height="100" Margin="5">
+                        <Grid>
                             <Image Name="Image1" Stretch="UniformToFill"/>
-                        </Button>
-                        <TextBlock Name="Label1" Text="Feature 1" Foreground="White" Background="#80000000"
-                                   FontWeight="Bold" FontSize="12" VerticalAlignment="Bottom"
-                                   HorizontalAlignment="Center" Padding="4" TextAlignment="Center"/>
-                    </Grid>
+                            <TextBlock Name="Label1"
+               Text="Features"
+               Foreground="White"
+               Background="#80000000"
+               FontWeight="Bold"
+               FontSize="12"
+               VerticalAlignment="Bottom"
+               HorizontalAlignment="Center"
+               Padding="4"
+               TextAlignment="Center"/>
+                        </Grid>
+                    </Button>
 
-                    <!-- Image 2 -->
-                    <Grid Width="150" Height="100" Margin="5">
-                        <Image Name="Image2" Stretch="UniformToFill"/>
-                        <TextBlock Name="Label2" Text="Feature 2" Foreground="White" Background="#80000000"
-                                   FontWeight="Bold" FontSize="12" VerticalAlignment="Bottom"
-                                   HorizontalAlignment="Center" Padding="4" TextAlignment="Center"/>
-                    </Grid>
+                    <Button Click="Image2_Click" BorderThickness="0" Background="Transparent" Width="150" Height="100" Margin="5">
+                        <Grid>
+                            <Image Name="Image2" Stretch="UniformToFill"/>
+                            <TextBlock Name="Label2"
+               Text="Profile"
+               Foreground="White"
+               Background="#80000000"
+               FontWeight="Bold"
+               FontSize="12"
+               VerticalAlignment="Bottom"
+               HorizontalAlignment="Center"
+               Padding="4"
+               TextAlignment="Center"/>
+                        </Grid>
+                    </Button>
 
-                    <!-- Image 3 -->
-                    <Grid Width="150" Height="100" Margin="5">
-                        <Image Name="Image3" Stretch="UniformToFill"/>
-                        <TextBlock Name="Label3" Text="Feature 3" Foreground="White" Background="#80000000"
-                                   FontWeight="Bold" FontSize="12" VerticalAlignment="Bottom"
-                                   HorizontalAlignment="Center" Padding="4" TextAlignment="Center"/>
-                    </Grid>
+                    <Button Click="Image3_Click" BorderThickness="0" Background="Transparent" Width="150" Height="100" Margin="5">
+                        <Grid>
+                            <Image Name="Image3" Stretch="UniformToFill"/>
+                            <TextBlock Name="Label3"
+               Text="Planner"
+               Foreground="White"
+               Background="#80000000"
+               FontWeight="Bold"
+               FontSize="12"
+               VerticalAlignment="Bottom"
+               HorizontalAlignment="Center"
+               Padding="4"
+               TextAlignment="Center"/>
+                        </Grid>
+                    </Button>
+
                 </StackPanel>
 
                 <Button Grid.Column="2" Content="▶" Width="40" Click="NextImage_Click"/>
