--- a/Games/MathGame.xaml
+++ b/Games/MathGame.xaml
@@ -1,68 +1,15 @@
 <Window x:Class="InspirationLabProjectStanSeyit.Games.MathGame"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Math Game" Height="600" Width="800"
-        WindowStartupLocation="CenterScreen">
-    <Grid Background="White">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="Auto"/>
-        </Grid.RowDefinitions>
-
-        <!-- Header -->
-        <TextBlock Text="Math Race" 
-                   FontSize="32" 
-                   FontWeight="Bold" 
-                   Foreground="#61be63"
-                   HorizontalAlignment="Center" 
-                   Margin="0,20"/>
-
-        <!-- Game Content -->
-        <StackPanel Grid.Row="1" Margin="40">
-            <TextBlock Name="ProblemText" 
-                       Text="Problem will appear here" 
-                       FontSize="36" 
-                       TextWrapping="Wrap" 
-                       Margin="0,0,0,20"
-                       HorizontalAlignment="Center"/>
-
-            <TextBox Name="AnswerInput" 
-                     Height="50" 
-                     FontSize="24" 
-                     TextAlignment="Center"
-                     Margin="0,20"/>
-
-            <Button Name="SubmitButton" 
-                    Content="Submit Answer" 
-                    Height="50" 
-                    Background="#61be63"
-                    Foreground="White"
-                    FontSize="20"
-                    Click="SubmitAnswer_Click"/>
-
-            <TextBlock Name="ScoreText" 
-                       Text="Score: 0" 
-                       FontSize="24" 
-                       HorizontalAlignment="Center" 
-                       Margin="0,20"/>
-
-            <TextBlock Name="TimerText" 
-                       Text="Time: 30" 
-                       FontSize="24" 
-                       HorizontalAlignment="Center" 
-                       Margin="0,10"/>
-        </StackPanel>
-
-        <!-- Footer -->
-        <StackPanel Grid.Row="2" Margin="20">
-            <Button Name="NewGameButton" 
-                    Content="New Game" 
-                    Height="40" 
-                    Background="#61be63"
-                    Foreground="White"
-                    FontSize="16"
-                    Click="NewGame_Click"/>
+        Title="Math Game" Height="450" Width="800">
+    <Grid>
+        <StackPanel Margin="20">
+            <TextBlock x:Name="TimerText" FontSize="18" HorizontalAlignment="Center" Margin="0,10"/>
+            <TextBlock x:Name="ProblemText" FontSize="24" HorizontalAlignment="Center" Margin="0,20"/>
+            <TextBox x:Name="AnswerInput" FontSize="18" Margin="0,20" Padding="5"/>
+            <Button x:Name="SubmitButton" Content="Submit Answer" Click="SubmitAnswer_Click" Margin="0,10"/>
+            <TextBlock x:Name="ScoreText" FontSize="18" HorizontalAlignment="Center" Margin="0,20"/>
+            <TextBlock x:Name="MessageDisplay" FontSize="16" HorizontalAlignment="Center" Margin="0,10"/>
         </StackPanel>
     </Grid>
 </Window> 
